--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^5.1.0",
+    "@vercel/analytics": "^1.1.2",
     "astro": "^4.0.8",
     "tailwindcss": "^3.3.3"
   }
