--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@astrojs/tailwind": "^5.1.0",
     "@vercel/analytics": "^1.1.2",
+    "@vercel/speed-insights": "^1.0.9",
     "astro": "^4.0.8",
     "tailwindcss": "^3.3.3"
   }
